pre ionic 7 upgrade

--- a/apps/sio-demo/src/assets/i18n/it.json
+++ b/apps/sio-demo/src/assets/i18n/it.json
@@ -1,5 +1,5 @@
 {
   "M_HOME": "Dashboard",
-  "M_ONE": "Pagina Uno",
-  "M_LINK_SILICIA": "Silicia Home"
+  "M_PRIVATE": "Area Riservata",
+  "M_PUBLIC": "Pagina Pubblica"
 }
