--- a/libs/sio/auth/src/lib/i18n/it.json
+++ b/libs/sio/auth/src/lib/i18n/it.json
@@ -3,5 +3,9 @@
   "LOGIN_COMPONENT_DO_NOT_HAVE_ACCOUNT": "Non hai ancora un account? <a href=\"auth/signup\">clicca</a>",
   "L_USERNAME": "Email",
   "L_PASSWORD": "Password",
-  "SUBMIT": "Accedi"
+  "SUBMIT": "Accedi",
+  "AUTH_ERROR": "Errore Autenticazione",
+  "BACKEND_RATE_LIMIT" : "Troppi tentativi riprovare tra qualche minuto",
+  "BACKEND_AUTH_NO_GUEST_ACCESS" : "Per accedere a questa pagina occorre loggarsi",
+  "BACKEND_AUTH_INVALID_CREDENTIALS": "Nome Utente o Password non validi"
 }
