--- a/apps/demo/src/assets/i18n/it.json
+++ b/apps/demo/src/assets/i18n/it.json
@@ -1,5 +1,6 @@
 {
     "M_HOME": "Home",
     "M_ABOUT": "Info",
-    "M_SETTINGS": "Opzioni"
+    "M_SETTINGS": "Opzioni",
+    "L_LANGUAGE": "test"
 }
