--- a/apps/demo/src/assets/i18n/it.json
+++ b/apps/demo/src/assets/i18n/it.json
@@ -2,5 +2,6 @@
     "M_HOME": "Home",
     "M_ABOUT": "Info",
     "M_SETTINGS": "Opzioni",
-    "L_LANGUAGE": "test"
+    "L_LANGUAGE": "test",
+    "LABEL_APP_TITLE" : "Titolo App"
 }
