add initials auth features on demo

--- a/apps/demo/src/assets/i18n/it.json
+++ b/apps/demo/src/assets/i18n/it.json
@@ -1,6 +1,6 @@
 {
     "M_HOME": "Home",
-    "M_ABOUT": "Info",
+    "M_INFO": "Info",
     "M_SETTINGS": "Opzioni",
     "L_LANGUAGE": "test",
     "LABEL_APP_TITLE" : "Titolo App"
