some other works

--- a/libs/auth/src/lib/i18n/it.json
+++ b/libs/auth/src/lib/i18n/it.json
@@ -1,8 +1,12 @@
 {
-  "LOGIN_COMPONENT_TITLE": "Accedi",
+  "LOGIN_COMPONENT_TITLE": "Acce",
   "LOGIN_COMPONENT_DO_NOT_HAVE_ACCOUNT": "Non hai ancora un account? <a href=\"auth/signup\">clicca</a>",
-  "L_USERNAME": "Email",
-  "L_PASSWORD": "Password",
+  "LABEL_USERNAME": "Email",
+  "USERNAME-ERROR-TEXT": "Non hai inserito una email valida",
+  "USERNAME-HELPER-TEXT": "Inserisci la tua email",
+  "LABEL_PASSWORD": "Password",
+  "PASSWORD-ERROR-TEXT": "Devi inserire una password",
+  "PASSWORD-HELPER-TEXT": "Inserisci la Tua Password",
   "SUBMIT": "Accedi",
   "AUTH_ERROR": "Errore Autenticazione",
   "BACKEND_RATE_LIMIT" : "Troppi tentativi riprovare tra qualche minuto",
