add storage on Database library

--- a/apps/demo/src/assets/i18n/en.json
+++ b/apps/demo/src/assets/i18n/en.json
@@ -4,5 +4,6 @@
     "M_SETTINGS": "Settings",
     "MENU_LOGGED_PROFILE": "Profile",
     "M_STORAGE": "Files",
-    "M_BUTTONS": "Buttons"
+    "M_BUTTONS": "Buttons",
+    "M_DATABASE": "Database"
 }
