--- a/apps/demo/src/assets/i18n/it.json
+++ b/apps/demo/src/assets/i18n/it.json
@@ -4,5 +4,6 @@
     "M_SETTINGS": "Opzioni",
     "MENU_LOGGED_PROFILE": "Profilo",
     "M_STORAGE": "Files",
-    "M_BUTTONS": "Bottoni"
+    "M_BUTTONS": "Bottoni",
+    "M_DATABASE": "Database"
 }
